# realLeague

./: .gitignore  CMakeLists.txt  README.md
assets/textures/: README.md
engine/audio/: AudioManager.cpp  AudioManager.h
engine/core/: Timer.cpp  Timer.h
engine/ecs/: Components.h  ECS.h
engine/input/: InputManager.cpp  InputManager.h
engine/render/: PixelSprite.cpp  PixelSprite.h  Renderer.cpp  Renderer.h  ttf_compat.h
game/abilities/: Fireball.cpp  Fireball.h
game/entities/: EntityFactory.cpp  EntityFactory.h
game/map/: Map.cpp  Map.h  Pathfinding.cpp  Pathfinding.h
game/systems/: AISystem.cpp  AISystem.h  AbilitySystem.cpp  AbilitySystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  RespawnSystem.cpp  RespawnSystem.h
game/ui/: UIManager.cpp  UIManager.h
include/: Game.h  Vec2.h
src/: Game.cpp  main.cpp
